# hotel_california

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml
extra/: hotel.postman_collection.json
src/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt
src/adapters/: orm.py  repository.py
src/alembic/: env.py
src/alembic/versions/: 07b1e1723b12_add_token_refresh.py  1471faa63cf3_room_s_tables_with_foreignkeys.py  56af9b92f9aa_add_default_user.py  56b3de96d1e3_init.py  a95a6a030491_add_password_to_users.py  cb0489f5ecfe_init.py  ce06f7cb2bd9_add_identity_order_remove_guest_field.py  f3a7bd31a332_initial.py
src/app/: service.py
src/domain/: models.py
src/hotel_california/: config.py
src/hotel_california/adapters/: orm.py  repository.py  sqlalchemy_init.py
src/hotel_california/domain/: models.py
src/hotel_california/entrypoints/app/: auth_bearer.py  auth_session.py  forms.py  main.py  serializers.py  workers.py
src/hotel_california/entrypoints/commands/: add_user.py  shell.py
src/hotel_california/service_layer/: exceptions.py  unit_of_work.py
src/hotel_california/service_layer/service/: hotel.py
src/hotel_california/tests/: conftest.py  test_add_user.py  test_booking.py  test_fake_repo.py  test_room.py  test_user_manager.py  test_user_manager_login.py
src/hotel_california/tests/api/: test_users.py
src/service_layer/: exceptions.py  unit_of_work.py
src/service_layer/service/: hotel.py
src/tests/: test_add_user.py  test_booking.py  test_fake_repo.py  test_found_room.py  test_room.py
(+15 files in other folders)
