[tool.poetry]
name = "hotel_california"
version = "0.1.0"
description = "тестовый отель"
authors = ["azat715 <azat715@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.31"
pydantic = "^1.9.0"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.3"}
email-validator = "^1.1.3"
alembic = "^1.7.6"
psycopg2-binary = "^2.9.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
mypy = "^0.931"
pylint = "^2.12.2"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
max-line-length = 90

[tool.isort]
profile = "black"